# editr

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: configuration.md  editors.md  hydration.md  recipes.md  remote-editing-models.md  troubleshooting.md  watcher.md
src/: cli.rs  commands.rs  config.rs  constants.rs  context.rs  editor.rs  hydrate.rs  main.rs  model.rs  mutagen.rs  open.rs  process.rs  session.rs  ssh.rs  target.rs  tests.rs  util.rs
