[package]
name = "editr"
version = "0.1.0"
edition = "2024"
description = "Open remote projects in local editor through a Mutagen-backed mirror"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shellexpand = "3"
toml = "0.8"
