[package]
name = "editr"
version = "0.1.0"
edition = "2024"
description = "Open remote projects in local editor through a Mutagen-backed mirror"
license = "MIT"
repository = "https://github.com/serhez/editr"
homepage = "https://github.com/serhez/editr"
documentation = "https://docs.rs/editr"
readme = "README.md"
keywords = ["remote", "editor", "ssh", "mutagen", "sync"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shellexpand = "3"
toml = "0.8"
